--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -186,7 +186,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:id="@+id/numDrawsLabel"
+                        android:id="@+id/numDrawsField"
                         android:layout_column="1"
                         android:layout_weight="2"
                         android:textSize="19dp"
