--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,203 @@
                 android:background="#80f5ff"
                 android:fillViewport="false" >
 
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton1"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton2"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton3"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton4"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton5"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton6"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton7"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton8"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton9"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton10"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton11"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton12"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton13"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton14"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton15"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton16"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton17"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton18"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton19"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton20"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton21"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton22"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton23"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/scrollButton24"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+                </LinearLayout>
             </ScrollView>
 
         </LinearLayout>
