--- a/app/src/main/res/layout/activity_player_edit.xml
+++ b/app/src/main/res/layout/activity_player_edit.xml
@@ -50,7 +50,206 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
-                android:fillViewport="false" />
+                android:fillViewport="false" >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button2"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button3"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button4"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button5"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button6"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button7"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button8"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button9"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button10"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button11"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button12"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button13"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button14"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button15"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button16"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button17"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button18"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button19"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button20"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button21"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button22"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button23"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please Add New Player"
+                        android:id="@+id/button24"
+                        android:background="#ffff00"
+                        android:enabled="false" />
+                </LinearLayout>
+            </ScrollView>
 
             <Button
                 android:layout_width="fill_parent"
