--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton1"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll1"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -61,7 +62,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton2"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll2"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -69,7 +71,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton3"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll3"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -77,7 +80,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton4"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll4"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -85,7 +89,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton5"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll5"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -93,7 +98,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton6"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll6"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -101,7 +107,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton7"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll7"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -109,7 +116,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton8"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll8"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -117,7 +125,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton9"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll9"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -125,7 +134,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton10"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll10"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -133,7 +143,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton11"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll11"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -141,7 +152,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton12"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll12"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -149,7 +161,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton13"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll13"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -157,7 +170,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton14"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll14"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -165,7 +179,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton15"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll15"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -173,7 +188,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton16"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll16"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -181,7 +197,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton17"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll17"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -189,7 +206,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton18"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll18"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -197,7 +215,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton19"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll19"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -205,7 +224,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton20"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll20"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -213,7 +233,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton21"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll21"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -221,7 +242,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton22"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll22"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -229,7 +251,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton23"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll23"/>
 
                     <Button
                         android:layout_width="fill_parent"
@@ -237,7 +260,8 @@
                         android:text="Please Add New Player"
                         android:id="@+id/scrollButton24"
                         android:background="#ffff00"
-                        android:enabled="false" />
+                        android:enabled="false"
+                        android:onClick="mainScroll24"/>
                 </LinearLayout>
             </ScrollView>
 
